--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + TS</title>
+</head>
+
+<body>
+  <div id="app"></div>
+
+  <nav>
+    <ul>
+      <li><a href="src/info/product.html">Product</a></li>
+      <li><a href="src/user/profile.html">Profile</a></li>
+    </ul>
+  </nav>
+
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
