Set script elements type attributes to module

--- a/src/user/profile.html
+++ b/src/user/profile.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>User profile</title>
   <link href="style.css" rel="stylesheet">
+  <script type="module" src="profile.ts" defer></script>
 </head>
 
-<body>
-
-</body>
+<body></body>
 
 </html>
