deploy: b6c0617f0205352ad3cfab6822e5d76958a1042d

--- a/src/info/product.html
+++ b/src/info/product.html
@@ -6,14 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Product info</title>
   <link href="style.css" rel="stylesheet">
+  
+  <script type="module" crossorigin src="/typescript-vite-demo/assets/info-bd87e0bf.js"></script>
+  <link rel="modulepreload" crossorigin href="/typescript-vite-demo/assets/modulepreload-polyfill-3cfb730f.js">
 </head>
 
-<body>
-  <h1>Product</h1>
-  <h3>Computer</h3>
-  <p>The best computer for you!</p>
-  <input type="text" name="price" value="$399.99">
-  <button type="button">Buy</button>
-</body>
+<body></body>
 
 </html>
