--- a/src/user/profile.html
+++ b/src/user/profile.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>User profile</title>
   <link href="style.css" rel="stylesheet">
+  
+  <script type="module" crossorigin src="/typescript-vite-demo/assets/profile-141ecee9.js"></script>
+  <link rel="modulepreload" crossorigin href="/typescript-vite-demo/assets/modulepreload-polyfill-3cfb730f.js">
 </head>
 
-<body>
-
-</body>
+<body></body>
 
 </html>
