--- a/src/info/product.html
+++ b/src/info/product.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Product info</title>
-  <script type="module" src="product.ts" defer></script>
+  <link rel="stylesheet" href="../style.css">
 </head>
 
-<body></body>
+<body>
+  <div id="section"></div>
+
+  <script type="module" src="product.ts" defer></script>
+</body>
 
 </html>
