--- a/src/user/profile.html
+++ b/src/user/profile.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>User profile</title>
-  <script type="module" src="profile.ts" defer></script>
+  <link rel="stylesheet" href="../style.css">
 </head>
 
-<body></body>
+<body>
+  <div id="section"></div>
+
+  <script type="module" src="profile.ts" defer></script>
+</body>
 
 </html>
