deploy: adec8451887573b84053986cfafe0640a715a1a7

--- a/src/info/product.html
+++ b/src/info/product.html
@@ -6,10 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Product info</title>
   
-  <script type="module" crossorigin src="/typescript-vite-demo/assets/info-bd87e0bf.js"></script>
-  <link rel="modulepreload" crossorigin href="/typescript-vite-demo/assets/modulepreload-polyfill-3cfb730f.js">
+  <script type="module" crossorigin src="/typescript-vite-demo/assets/info-3d03991f.js"></script>
+  <link rel="modulepreload" crossorigin href="/typescript-vite-demo/assets/style-82cf32f5.js">
+  <link rel="stylesheet" href="/typescript-vite-demo/assets/style-fa2ff103.css">
 </head>
 
-<body></body>
+<body>
+  <div id="section"></div>
+
+  
+</body>
 
 </html>
