--- a/src/user/profile.html
+++ b/src/user/profile.html
@@ -6,10 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>User profile</title>
   
-  <script type="module" crossorigin src="/typescript-vite-demo/assets/profile-141ecee9.js"></script>
-  <link rel="modulepreload" crossorigin href="/typescript-vite-demo/assets/modulepreload-polyfill-3cfb730f.js">
+  <script type="module" crossorigin src="/typescript-vite-demo/assets/profile-258e5169.js"></script>
+  <link rel="modulepreload" crossorigin href="/typescript-vite-demo/assets/style-82cf32f5.js">
+  <link rel="stylesheet" href="/typescript-vite-demo/assets/style-fa2ff103.css">
 </head>
 
-<body></body>
+<body>
+  <div id="section"></div>
+
+  
+</body>
 
 </html>
